test_models çalışması yapıldı, carts bitirildi.

--- a/app/templates_for_istebu/__base.html
+++ b/app/templates_for_istebu/__base.html
@@ -27,7 +27,7 @@
 
 {% include '_promo_section.html' %}
 
-{% include '_products_section.html' %}
+{% include '_products_section/__products_section.html' %}
 
 {% include '_banner_section.html' %}
 
