--- a/app/templates_for_istebu/_products_section.html
+++ b/app/templates_for_istebu/_products_section.html
@@ -634,6 +634,8 @@
                                             <span class="aa-badge aa-sold-out" href="#">Sold Out!</span>
                                         </li>
                                     </ul>
+                                    <a class="aa-browse-btn" href="#">Browse all Product <span
+                                            class="fa fa-long-arrow-right"></span></a>
                                 </div>
                                 <!-- / sports product category -->
                                 <!-- start electronic product category -->
