--- a/app/templates_for_istebu/_head_css.html
+++ b/app/templates_for_istebu/_head_css.html
@@ -13,13 +13,15 @@
     <!-- price picker slider -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/nouislider.css' %}">
     <!-- Theme color -->
-    <link id="switcher" href="{% static 'css/theme-color/default-theme.css' %}" rel="stylesheet">
-    <!-- <link id="switcher" href="{% static 'css/theme-color/bridge-theme.css' %}" rel="stylesheet"> -->
+    <link id="switcher" href="{% static 'css/theme-color/lite-blue-theme.css' %}" rel="stylesheet">
     <!-- Top Slider CSS -->
     <link href="{% static 'css/sequence-theme.modern-slide-in.css' %}" rel="stylesheet" media="all">
 
     <!-- Main style sheet -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+    <!-- Custom style sheet -->
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
     <!-- Google Font -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
