--- a/app/templates_for_istebu/home.html
+++ b/app/templates_for_istebu/home.html
@@ -1,1 +1,57 @@
 {% extends '__base.html' %}
+
+{% block messages %}
+    {% include '_messages.html' %}
+{% endblock %}
+
+{% block slider_section %}
+    {% include '_slider_section.html' %}
+{% endblock %}
+
+{% block promo_section %}
+    {% include '_promo_section.html' with object_list=promotions %}
+{% endblock %}
+
+{% block products_section %}
+    {% include '_products_section/__products_section.html' with object_list=products %}
+{% endblock %}
+
+{% block banner_section %}
+    {% include '_banner_section.html' %}
+{% endblock %}
+
+{% block popular_section %}
+    {% include '_popular_section.html' %}
+{% endblock %}
+
+{% block support_section %}
+    {% include '_support_section.html' %}
+{% endblock %}
+
+{% block latest_blog_section %}
+    {% include '_latest_blog_section.html' %}
+{% endblock %}
+
+{% block brand_section %}
+    {% include '_brand_section.html' %}
+{% endblock %}
+
+{% block subscribe_section %}
+    {% include '_subscribe_section.html' %}
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
