django rest framework kurmadan önceki adım

--- a/app/templates_for_istebu/_header_section.html
+++ b/app/templates_for_istebu/_header_section.html
@@ -85,10 +85,11 @@
                             <a class="aa-cart-link" href="#">
                                 <span class="fa fa-shopping-basket"></span>
                                 <span class="aa-cart-title">SHOPPING CART</span>
-                                <span class="aa-cart-notify">2</span>
+                                <span id="cart-count-badge" class="aa-cart-notify">2</span>
                             </a>
                             <div class="aa-cartbox-summary">
-                                <ul>
+                                <ul id="cartbox-summary">
+
                                     <li>
                                         <a class="aa-cartbox-img" href="#"><img src="{% static 'img/woman-small-2.jpg' %}"
                                                                                 alt="img"></a>
