--- a/app/templates_for_istebu/_javascript.html
+++ b/app/templates_for_istebu/_javascript.html
@@ -19,3 +19,7 @@
 <script type="text/javascript" src="{% static 'js/nouislider.js' %}"></script>
 <!-- Custom js -->
 <script src="{% static 'js/custom.js' %}"></script>
+<!-- istebu js -->
+<script src="{% static 'js/istebu.js' %}"></script>
+
+}
