--- a/app/templates_for_istebu/__base.html
+++ b/app/templates_for_istebu/__base.html
@@ -24,7 +24,7 @@
 {#{% include '_menu_section.html' %}#}
 {% include "visual_site_elements/menu/menu_items.html" with object_list=categories %}
 
-{% block messages %} {% endblock %}
+{#{% block messages %} {% endblock %}#}
 
 {% block slider_section %} {% endblock %}
 
@@ -53,5 +53,8 @@
 {% include '_login_modal_section.html' %}
 
 {% include '_javascript.html' %}
+
+{% include '_javascript_istebu.html' %}
+
 </body>
 </html>
