cart summary sadece remove dışında tamamdır.

--- a/app/templates_for_istebu/_header_section.html
+++ b/app/templates_for_istebu/_header_section.html
@@ -109,15 +109,15 @@
                                         <a class="aa-remove-product" href="#"><span class="fa fa-times"></span></a>
                                     </li>
                                     <li>
-                      <span class="aa-cartbox-total-title">
+                      <span id="total text" class="aa-cartbox-total-title">
                         Total
                       </span>
-                                        <span class="aa-cartbox-total-price">
+                                        <span id="total-rakam" class="aa-cartbox-total-price">
                         $500
                       </span>
                                     </li>
                                 </ul>
-                                <a class="aa-cartbox-checkout aa-primary-btn" href="checkout.html">Checkout</a>
+                                <a id='checkout' class="aa-cartbox-checkout aa-primary-btn" href="checkout.html">Alışverişi Tamamla</a>
                             </div>
                         </div>
                         <!-- / cart box -->
