--- a/app/templates_for_istebu/_javascript_istebu.html
+++ b/app/templates_for_istebu/_javascript_istebu.html
@@ -3,21 +3,21 @@
 
     // bu fonksiyon custom_message.js dosyasımda idi...
 function showFlashMessage(message) {
-    console.log("showFlashMessaje çalıştı");
+    //console.log("showFlashMessaje çalıştı");
     var template = "<div class='container container-alert-flash'>" +
         "<div class='col-sm-3 col-sm-offset-8'> " +
         "<div class='alert alert-success alert-dismissible' role='alert'>" +
         "<button type='button' class='close' data-dismiss='alert' aria-label='Close'>" +
         "<span aria-hidden='true'>&times;</span></button>"
         + message + "</div></div></div>";
-    console.log(template)
+    //console.log(template)
     $("body").append(template);
     $(".container-alert-flash").fadeIn();
     setTimeout(function () {
         $(".container-alert-flash").fadeOut();
     }, 1800);
-
 }
+
 // bu anasayfadaki herhangi bir ürüne tıklandığında çalışan fonksiyon...
 $('.aa-add-card-btn').click( function(e) {
     e.preventDefault();
@@ -42,25 +42,33 @@ $('.aa-add-card-btn').click( function(e) {
     return false;
 } );
 
+function removeProduct(product) {
+    var product_id = product.id;
+    console.log('product_id : ', product_id);
 
-function removeProduct(id) {
-    //console.log('remove clicklendi, product_id ???', id);
-    $.ajax({
-        type: "GET", // "POST"
-        url: "{% url 'cart' %}",
-        data: "item=" + id + "&qty=0",
-        success: function (data) {
-            //console.log('success çalıştı');
-            //console.log(data);
-            showFlashMessage(data.flash_message);
-            updateCartItemCount();
-        },
-        error: function (response, error) {
-            // console.log(response)
-            // console.log(error)
-            $("#add-form").submit(); //bu çalışmaz
-        }
+    $(product.parentElement).fadeOut(800);
+    $(product.parentElement).promise().done(function(){
+    // will be called when all the animations on the queue finish
+        // console.log( 'Task finished ama zamanında.' );
+        $.ajax({
+
+            type: "GET", // "POST"
+            url: "{% url 'cart' %}",
+            data: "item=" + product_id + "&qty=0",
+            success: function (data) {
+                //console.log('success çalıştı');
+                //console.log(data);
+                showFlashMessage(data.flash_message);
+                updateCartItemCount();
+            },
+            error: function (response, error) {
+                // console.log(response)
+                // console.log(error)
+                $("#add-form").submit(); //bu çalışmaz
+            }
+        });
     });
+
 }
 
 function updateCartItemCount() {
@@ -71,7 +79,7 @@ function updateCartItemCount() {
         url: "{% url 'item_count' %}",
         success: function (data) {
             badge.text(data.count);
-            console.log(data.count);
+            //console.log(data.count);
 
         },
         error: function (response, error) {
@@ -86,13 +94,13 @@ function updateCartItemCount() {
 }
 
 function getCartItems() {
-    var template = '<li>' +
-                        '<a class="aa-cartbox-img" href="#"><img id="product-image" src="#" alt="img"></a>' +
+    var template = '<li id="list-id" style="display: none;">' +
+                        '<a class="aa-cartbox-img" id="product-image" href="#"><img src="#" alt="img"></a>' +
                             '<div class="aa-cartbox-info">' +
                                '<h4><a id="some-id" href="#">Product Name</a></h4>' +
                                 '<p><span id="adet">1</span> x <span id="fiyat">$250</span></p>' +
                             '</div>' +
-                            '<a id="product-id" class="aa-remove-product" href="#" onclick="return removeProduct(this.id);">' +
+                            '<a id="product-id" class="aa-remove-product" href="#" onclick="return removeProduct(this);">' +
                             '<span class="fa fa-times"></span></a>' +
                     '</li>';
     var cart_summary = $("#cartbox-summary");
@@ -107,38 +115,45 @@ function getCartItems() {
             if (data.length > 0) {
 
                 var data_to_be_looped = data[0].items; // items arrayimiz
-                //console.log(data_to_be_looped);
 
                 $.each(data_to_be_looped, function (arrayID, object) {
-                    // console.log(object);
+
+                    //önce ekledik.
                     cart_summary.append(template);
+
                     var new_title_id = "product" + arrayID;
                     var new_image_id = "image" + arrayID;
                     var new_adet_id = "adet" + arrayID;
                     var new_fiyat_id = "fiyat" + arrayID;
+                    var new_list_id = "list" + arrayID;
 
                     $('#some-id').attr('id', new_title_id);
                     $('#product-image').attr('id', new_image_id);
                     $('#adet').attr('id', new_adet_id);
                     $('#fiyat').attr('id', new_fiyat_id);
                     $('#product-id').attr('id', object.product_id);
-
+                    $('#list-id').attr('id', new_list_id);
 
                     var product_title = $("#" + new_title_id);
                     var product_image = $("#" + new_image_id);
                     var product_adet = $("#" + new_adet_id);
                     var product_fiyat = $("#" + new_fiyat_id);
+                    var list = $("#" + new_list_id);
 
-                    //console.log(product_title);
+
+
                     product_title.text(object.product_title);
                     product_title.attr('href', object.product_url);
-                    //console.log("product_title", object.product_title);
-                    product_image.attr("src", object.image);
-                    //console.log(object.sale_price);
+                    product_image.find('img').attr('src', object.image);
+                    product_image.attr('href', object.product_url);
                     product_fiyat.text(object.sale_price + ' ,-₺');
                     product_adet.text(object.quantity);
 
                     cart_total += object.sub_total;
+
+                    $(list).appendTo('#cartbox-summary').show(1000);
+                    console.log('list = ', list);
+
 
                 });
 
@@ -175,6 +190,6 @@ function getCartItems() {
 
 $(document).ready(function () {
     updateCartItemCount();
-})
+});
 
 </script>
