javascript html templateleri için base template oluşturuldu, diğer templatelerin ondan extend etmeleri sağlandı.

--- a/app/templates_for_istebu/__base.html
+++ b/app/templates_for_istebu/__base.html
@@ -46,15 +46,11 @@
 
 {% block subscribe_section %} {% endblock %}
 
-{% block footer_section %} {% endblock %}
-
 {% include '_footer_section.html' %}
 
 {% include '_login_modal_section.html' %}
 
-{% include '_javascript.html' %}
-
-{% include '_javascript_istebu.html' %}
+{% block javascript_section %} {% endblock %}
 
 </body>
 </html>
