--- a/app/templates_for_istebu/home.html
+++ b/app/templates_for_istebu/home.html
@@ -36,6 +36,9 @@
     {% include '_subscribe_section.html' %}
 {% endblock %}
 
+{% block javascript_section %}
+    {% include '_javascript_home.html' %}
+{% endblock %}
 
 
 
