--- a/app/templates_for_istebu/_javascript_home.html
+++ b/app/templates_for_istebu/_javascript_home.html
@@ -1,4 +1,41 @@
+{% extends '_javascript_base.html' %}
+{% load staticfiles %}
 <!-- aşağıdaki fonksiyon django template tag içerdiği için .js dosyasına koyamıyoruz. -->
+
+{% block smart_menus %}
+<!-- SmartMenus jQuery plugin -->
+<script type="text/javascript" src="{% static 'js/jquery.smartmenus.js' %}"></script>
+<!-- SmartMenus jQuery Bootstrap Addon -->
+<script type="text/javascript" src="{% static 'js/jquery.smartmenus.bootstrap.js' %}"></script>
+{% endblock %}
+
+
+{% block slider %}
+<!-- To Slider JS -->
+<script src="{% static 'js/sequence.js' %}"></script>
+<script src="{% static 'js/sequence-theme.modern-slide-in.js' %}"></script>
+{% endblock %}
+
+{% block product_view_slider %}
+<!-- Product view slider -->
+<script type="text/javascript" src="{% static 'js/jquery.simpleGallery.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.simpleLens.js' %}"></script>
+{% endblock %}
+
+
+{% block slick_slider %}
+<!-- slick slider -->
+<script type="text/javascript" src="{% static 'js/slick.js' %}"></script>
+{% endblock %}
+
+
+{% block price_picker_slider %}
+<!-- Price picker slider / Buna anasayfada gerek yok -->
+<script type="text/javascript" src="{% static 'js/nouislider.js' %}"></script>
+{% endblock %}
+
+{% block custom_javascript %}
+
 <script>
 
     // bu fonksiyon custom_message.js dosyasımda idi...
@@ -199,3 +236,5 @@ $(document).ready(function () {
 });
 
 </script>
+
+{% endblock %}
