jabascript templateleri bir klasör altında toplandı.

--- a/app/templates_for_istebu/_javascripts/_javascript_home.html
+++ b/app/templates_for_istebu/_javascripts/_javascript_home.html
@@ -1,4 +1,4 @@
-{% extends '_javascript_base.html' %}
+{% extends '_javascripts/_javascript_base.html' %}
 {% load staticfiles %}
 <!-- aşağıdaki fonksiyon django template tag içerdiği için .js dosyasına koyamıyoruz. -->
 
