--- a/app/templates_for_istebu/home.html
+++ b/app/templates_for_istebu/home.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block javascript_section %}
-    {% include '_javascript_home.html' %}
+    {% include '_javascripts/_javascript_home.html' %}
 {% endblock %}
 
 
