--- a/app/templates_for_istebu/_header_section.html
+++ b/app/templates_for_istebu/_header_section.html
@@ -53,19 +53,19 @@
                         <!-- logo  -->
                         <div class="aa-logo">
                             <!-- Text based logo -->
-                            <a href="index.html">
-                                <span class="fa fa-shopping-cart"></span>
-                                <p>daily<strong>Shop</strong> <span>Your Shopping Partner</span></p>
-                            </a>
+{#                            <a href="index.html">#}
+{#                                <span class="fa fa-shopping-cart"></span>#}
+{#                                <p>daily<strong>Shop</strong> <span>Your Shopping Partner</span></p>#}
+{#                            </a>#}
                             <!-- img based logo -->
-                            <!-- <a href="index.html"><img src="{% static 'img/logo.jpg' %}" alt="logo img"></a> -->
+                            <a href="index.html"><img src="{% static 'img/istebu_logo.png' %}" alt="logo img"></a>
                         </div>
                         <!-- / logo  -->
                         <!-- cart box -->
                         <div class="aa-cartbox">
                             <a class="aa-cart-link" href="#">
                                 <span class="fa fa-shopping-basket"></span>
-                                <span class="aa-cart-title">SHOPPING CART</span>
+                                <span class="aa-cart-title">SEPETİM</span>
                                 <span id="cart-count-badge" class="aa-cart-notify">2</span>
                             </a>
                             <div class="aa-cartbox-summary">
@@ -104,8 +104,9 @@
                         <!-- / cart box -->
                         <!-- search box -->
                         <div class="aa-search-box">
-                            <form action="">
-                                <input type="text" name="" id="" placeholder="Search here ex. 'man' ">
+                            <form method="GET" role="search" action='{% url "products:products" %}'>
+                                <input type="text" id="" placeholder="Ara" name="q"
+                                value='{{ request.GET.q }}'>
                                 <button type="submit"><span class="fa fa-search"></span></button>
                             </form>
                         </div>
