--- a/app/templates_for_istebu/_products_section/_product_navigation.html
+++ b/app/templates_for_istebu/_products_section/_product_navigation.html
@@ -1,8 +1,8 @@
 <!-- start prduct navigation -->
                             <ul class="nav nav-tabs aa-products-tab">
-                                <li class="active"><a href="#men" data-toggle="tab">Men</a></li>
-                                <li><a href="#women" data-toggle="tab">Women</a></li>
-                                <li><a href="#sports" data-toggle="tab">Sports</a></li>
-                                <li><a href="#electronics" data-toggle="tab">Electronics</a></li>
+                                <li class="active"><a href="#one-cikanlar" data-toggle="tab">ÖNE ÇIKANLAR</a></li>
+                                <li><a href="#firsat" data-toggle="tab">FIRSAT ÜRÜNLERİ</a></li>
+                                <li><a href="#kampanya" data-toggle="tab">KAMPANYALI ÜRÜNLER</a></li>
+                                <li><a href="#cok-satan" data-toggle="tab">ÇOK SATANLAR</a></li>
                             </ul>
 
