xml import öncesi son durum, eski template dosyalarını da ne olur ne olmaz diye silemedim.

--- a/app/templates_for_istebu/carts/view.html
+++ b/app/templates_for_istebu/carts/view.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block messages %}
-    {% include '_messages.html' %}
+{#    {% include '_messages.html' %}#}
 {% endblock %}
 
 <script>
